# pyprimat

./: .gitignore  CPLAN.md  CUSTOMPOPUP.md  FINAL.md  FIX.md  FOLDER.md  FUTURE.md  GUI.md  IDEAS.md  IDEAS2.md  IMPROVEMENTS.md  LICENCE  MANIFEST.in  NEWPHYSICS.md  PRIMAT.md  PyPiGuide.md  README.md  packaging_and_wrapper_advice.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.devcontainer/: devcontainer.json
CPRIMAT/: Makefile
biblio/: PRIMAT-Main-gray.nb  PhysReptRevised.tex
doc/: EXTENDING.md  PyPRIMAT_doc_figures.ipynb  PyPRIMAT_documentation.tex  PyPRIMAT_documentation_v0.1.0.tex  README.md  generate_tab_reactions.py  primat_doc_figures.ipynb  primat_documentation_v0.3.1.tex  tab_nuclides.tex  tab_reactions.tex
generate_rates/: PRIMAT-Main-gray.m  PRIMAT-Main.m  PRIMAT-Main_decays.m  README.md  convert_ac2024_rates.py  generate_qed_tables.py  migrate_tables_to_folders.py  nuclear_data.py  nuclide_table.py  reformat_scientific.py
notebooks/: AbundanceEvolution.ipynb  AbundancesNrelat.ipynb  AbundancesXi.ipynb  AnimatedAbundances.ipynb  CompareSmallNetworks.ipynb  DecayEvolution.ipynb  MonteCarloRates.ipynb  PosteriorBaryons.ipynb  README.md  Sensitivity.ipynb  StandardPlots.ipynb
primat/: __init__.py  backend.py  background.py  cache_utils.py  cli.py  config.py  constants.py  credits.py  evolution.py  main.py  network_builder.py  network_data.py  neutrino_history.py  nuclear_network.py  plasma.py  plotting.py  qed_pressure.py
primat-c/: Makefile  README.md
pypr/: __init__.py  config.py  network_builder.py  nuclear.py  plasma.py  qed_pressure.py
pyprimat/: __init__.py  background.py  bbn_network.py  cache_utils.py  cli.py  config.py  constants.py  main.py  network_builder.py  network_data.py  neutrino_history.py  nuclear.py  nuclear_network.py  plasma.py  plotting.py  qed_pressure.py  weak_rates.py
runfiles/: PyPRIMAT_compare.py  PyPRIMAT_reference_run.py  PyPRIMAT_run.py  generate_table_CLASS_CAMB.py  generate_weak_rate_caches.py  primat_compare.py  primat_reference_run.py  primat_run.py  primat_run_explanatory.py  run_basic.py
studies/: profile_solve.py
tests/: README.md  _oracles.py  conftest.py  reference_values.py  test_api.py  test_backend_parity.py  test_background.py  test_cache_utils.py  test_cli.py  test_config.py  test_constants.py  test_custom_background.py  test_custom_loader.py  test_decay_rates.py  test_decoupling_qed.py  test_detailed_balance.py  test_deuterium_network.py  test_docs_consistency.py  test_evolution.py  test_gui.py  test_gui_custom_network.py  test_gui_run_view.py  test_large_network.py  test_mc.py  test_network_builder.py  test_network_generation.py  test_neutrino_history.py  test_notebooks.py  test_nuclear.py  test_nuclear_qed.py  test_plasma.py  test_qed_pressure.py  test_rate_variations.py  test_refactor_invariants.py  test_regression.py  test_runfiles.py  test_spectral_distortions.py  test_weak_rates.py  (+1 more)
(+1609 files in other folders)
