[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "PyPRIMAT"
version = "0.2.0"
description = "Python implementation of PRIMAT for precise Big Bang Nucleosynthesis computations"
readme = "README.md"
license = { file = "LICENCE" }
authors = [
    { name = "Cyril Pitrou", email = "pitrou@iap.fr" },
    { name = "Julien Froustey" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "joblib",
    "plotly",
]

[project.scripts]
pyprimat = "pyprimat.cli:main"
pyprimat-gui = "pyprimat.gui.launcher:main"

[project.optional-dependencies]
recommended = [
    "numba",
    "vegas",
]
all = [
    "numba",
    "vegas",
]
notebooks = [
    "matplotlib",
    "pandas",
    "papermill",
]
gui = [
    "streamlit",
    "pandas",
]

[tool.setuptools]
packages = ["pyprimat", "pyprimat.gui"]

[tool.setuptools.package-data]
"pyprimat" = ["rates/**/*", "gui/.streamlit/*"]
