[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "primat"
version = "0.3.0"
description = "PRIMAT: precise Big Bang Nucleosynthesis computations, with a fast C backend and a pure-Python fallback"
readme = "README.md"
license = { file = "LICENCE" }
authors = [
    { name = "Cyril Pitrou", email = "pitrou@iap.fr" },
]
maintainers = [
    { name = "Julien Froustey" },
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "scipy",
    "joblib",
    "plotly",
]

[project.scripts]
primat = "primat.cli:main"
primat-gui = "primat.gui.launcher:main"

[project.optional-dependencies]
recommended = [
    "numba",
    "vegas",
]
all = [
    "numba",
    "vegas",
]
notebooks = [
    "matplotlib",
    "pandas",
    "papermill",
]
gui = [
    "streamlit",
    "pandas",
]

[tool.setuptools]
packages = ["primat", "primat.gui", "primat.weak_rates"]

[tool.setuptools.package-data]
"primat" = ["data/**/*", "gui/.streamlit/*"]
